--- a/home/index.html
+++ b/home/index.html
@@ -39,7 +39,7 @@
         Ubicada en el corazón de la ciudad, la
         <strong>Barbería Alura</strong> trae para el mercado lo que hay de
         mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya
-        es destaque en la ciudad y conquista nuevos clientes diariamente.
+        es destaque en la ciudad y conquista nuevos clientes diariamente. etc etc
       </p>
 
       <p class="mision">
